# osxQ

./: .gitignore  BINARY-LICENSE.txt  LICENSE  README.md  bench.sh  bench_with_logging.sh  index.html  license.html  privacy-consent.js  privacy.html  pyproject.toml  pytest.ini  terms.html  test.sh
paper/quantics-lncs-2026/: mlxquantum_quantics2026_lncs.bbl  mlxquantum_quantics2026_lncs.blg  mlxquantum_quantics2026_lncs.tex  references.bib
quantumstudio/: BINARY-LICENSE.txt  LICENSE  LICENSE.md  README.md  RELEASE_NOTES.md  install.sh  issues.sh  settings.json
quantumstudio/backend/: job_worker.py  main.py  requirements.txt
quantumstudio/flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
quantumstudio/runs/: run_20260501_175704_ae5c59.json
quantumstudio/scripts/: build_dmg.sh  build_flutter_app.sh  release.sh
quantumstudio/tests/: test_backend_api.py  test_mcp_server.py
scripts/: setup_runtime_venv.sh
src/benchmark/: aggregate_plots.py  bench.py  bench_tui.py  bench_with_logging.py  benchpress_replica.py  generate_qasm_table.py  mlxQBenchmarks.py  mqtbench_vqe.py
src/examples/: __init__.py  qpe_energy_estimation.py
src/mlxq/: __init__.py  bench.py  channels.py  circuit.py  device.py  draw.py  gates.py  information.py  metrics.py  mlxQbench.py  mlxQchannels.py  mlxQcircuit.py  mlxQdevice.py  mlxQdraw.py  mlxQgates.py  mlxQinformation.py  mlxQmetrics.py  mlxQobservables.py  mlxQpretty.py  mlxQqasm.py  mlxQquantikz.py  mlxQsim.py  qasm.py  (+16 more)
tools/: appendix_coverage_report.py  custatevec_bench.py  mps_dgrowth.py  mps_report.py  overlay_compare.py
(+595 files in other folders)
